<resources>
    <string name="app_name">TMI</string>
    <string name="str_done">지정 완료</string>
    <string name="e_mail">이메일</string>
    <string name="str_authorize">인증</string>
    <string name="str_passwd">암호</string>
    <string name="str_register">회원가입</string>

    <string name="spinner_title">목적지를 선택</string>
    <string name="str_name">이름</string>
    <string name="str_refresh">새로고침</string>
    <string name="str_email">Email</string>
    <string name="str_time">출발시각</string>
    <string-array name="dst_arrays">
        <item>인천대 정문</item>
        <item>인천대 자연대</item>
        <item>인천대 공대</item>
        <item>인천대 기숙사</item>
        <item>인천대 미추홀</item>
    </string-array>

    <string-array name="comment_arrays">
        <item>직접 입력</item>
        <item>지각입니다 ㅠ.ㅜ</item>
        <item>저랑 같이 탑승하실래요?</item>
        <item>자네도 혹시 지각인가?</item>
    </string-array>

</resources>
