<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <TableLayout
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn">
        <TableRow>
            <TextView
                android:text="@string/e_mail"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/authorBtn"
                android:layout_width="50dp"
                android:text="@string/str_authorize"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/str_passwd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <EditText
                android:id="@+id/inputPasswd"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/str_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <EditText
                android:id="@+id/inputName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/registerBtn"
        android:text="@string/str_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>